tests/integration/snapshots/build/test_build_good_and_bad_contracts_with_syntax_error.stderr.txt
Error: In ok2:

[ROOT]/contracts/ok2[LINE]: error: expected <expression>, got `;`
   3 |                 val x =;
     |                        ^

Build failed with 1 error
